--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ГИАТЕРРА — ИИ-сервис для юристов</title>
-  <meta name="description" content="Российский ИИ-сервис для юристов: безопасность 152-ФЗ, ежедневные обновления, работа с документами и аудио. 14 дней бесплатно.">
+  <meta name="description" content="Российский ИИ-сервис для юристов: соответствие 152-ФЗ, ежедневные обновления, работа с документами и аудио. 14 дней бесплатно.">
   <link rel="icon" href="logo.png">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -41,7 +41,6 @@
           <li>Ежедневные обновления законодательства</li>
           <li>Работа с файлами и аудио</li>
         </ul>
-        <!-- сноску в hero убрали -->
       </div>
     </section>
 
@@ -86,33 +85,33 @@
             <tbody>
               <tr>
                 <td>Российский сервер</td>
-                <td class="yes" aria-label="Да"></td>
-                <td class="no" aria-label="Нет"></td>
-                <td class="no" aria-label="Нет"></td>
+                <td class="yes">✓</td>
+                <td class="no">✕</td>
+                <td class="no">✕</td>
               </tr>
               <tr>
                 <td>Ежедневные обновления*</td>
-                <td class="yes" aria-label="Да"></td>
-                <td class="no" aria-label="Нет"></td>
-                <td class="no" aria-label="Нет"></td>
+                <td class="yes">✓</td>
+                <td class="no">✕</td>
+                <td class="no">✕</td>
               </tr>
               <tr>
                 <td>Специализация для юристов</td>
-                <td class="yes" aria-label="Да"></td>
-                <td class="partial" aria-label="Частично"></td>
-                <td class="partial" aria-label="Частично"></td>
+                <td class="yes">✓</td>
+                <td class="partial">○</td>
+                <td class="partial">○</td>
               </tr>
               <tr>
                 <td>Анонимайзер ПД</td>
-                <td class="yes" aria-label="Да"></td>
-                <td class="no" aria-label="Нет"></td>
-                <td class="no" aria-label="Нет"></td>
+                <td class="yes">✓</td>
+                <td class="no">✕</td>
+                <td class="no">✕</td>
               </tr>
               <tr>
                 <td>Файлы и аудио</td>
-                <td class="yes" aria-label="Да"></td>
-                <td class="partial" aria-label="Частично"></td>
-                <td class="partial" aria-label="Частично"></td>
+                <td class="yes">✓</td>
+                <td class="partial">○</td>
+                <td class="partial">○</td>
               </tr>
             </tbody>
           </table>
@@ -161,7 +160,7 @@
         <p class="lead reveal delay1">14 дней бесплатно + персональный onboarding при заключении договора до <strong>30 сентября</strong>.</p>
         <div class="cta reveal delay2">
           <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3A%0AКомпания%3A%0AТелефон%3A">Оставить заявку по email</a>
-          <a class="btn btn-ghost" href="tel:+79273333329">Позвонить +7 (927) 333-33-29</a>
+          <a class="btn btn-ghost" href="tel:+79373355113">Позвонить 8&nbsp;(937)&nbsp;335-51-13</a>
         </div>
       </div>
     </section>
@@ -171,7 +170,7 @@
       <div class="container grid2">
         <div class="card reveal">
           <h2>Контакты</h2>
-          <p><strong>Телефон:</strong> <a href="tel:+79273333329">+7 (927) 333-33-29</a></p>
+          <p><strong>Телефон:</strong> <a href="tel:+79373355113">8&nbsp;(937)&nbsp;335-51-13</a></p>
           <p><strong>Email:</strong> <a href="mailto:giaterra.rf@gmail.com">giaterra.rf@gmail.com</a></p>
           <p class="muted">С уважением, команда «ГИАТЕРРА»</p>
         </div>
@@ -181,7 +180,6 @@
           <input class="input" name="Email" type="email" placeholder="Ваш email" required>
           <textarea class="input" name="Сообщение" rows="4" placeholder="Коротко опишите задачу"></textarea>
           <button class="btn btn-primary" type="submit">Отправить</button>
-          <!-- строку про Formspree/Яндекс.Формы удалили -->
         </form>
       </div>
     </section>
