--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       </div>
     </section>
 
-    <!-- СРАВНЕНИЕ (со звёздочкой у «Ежедневные обновления*») -->
+    <!-- СРАВНЕНИЕ (как на макете) -->
     <section id="compare" class="section">
       <div class="container">
-        <h2 class="reveal">Сравнение</h2>
+        <h2 class="reveal">Сравните с другими</h2>
         <div class="table-wrap reveal delay1">
           <table class="table compare">
             <thead>
@@ -92,26 +92,26 @@
               <tr>
                 <td>Ежедневные обновления*</td>
                 <td class="yes">✓</td>
-                <td class="no">✕</td>
-                <td class="no">✕</td>
+                <td class="no">✕ <span class="year">(2023)</span></td>
+                <td class="no">✕ <span class="year">(2023)</span></td>
               </tr>
               <tr>
-                <td>Специализация для юристов</td>
-                <td class="yes">✓</td>
-                <td class="partial">○</td>
-                <td class="partial">○</td>
-              </tr>
-              <tr>
-                <td>Анонимайзер ПД</td>
+                <td>Специализация под юристов</td>
                 <td class="yes">✓</td>
                 <td class="no">✕</td>
                 <td class="no">✕</td>
               </tr>
               <tr>
-                <td>Файлы и аудио</td>
+                <td>Анонимайзер персональных данных</td>
                 <td class="yes">✓</td>
-                <td class="partial">○</td>
-                <td class="partial">○</td>
+                <td class="no">✕</td>
+                <td class="no">✕</td>
+              </tr>
+              <tr>
+                <td>Работа с файлами и аудио*</td>
+                <td class="yes">✓</td>
+                <td class="semi">частично</td>
+                <td></td>
               </tr>
             </tbody>
           </table>
@@ -159,7 +159,7 @@
         <h2 class="reveal">Специальное предложение</h2>
         <p class="lead reveal delay1">14 дней бесплатно + персональный onboarding при заключении договора до <strong>30 сентября</strong>.</p>
         <div class="cta reveal delay2">
-          <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3A%0AКомпания%3A%0AТелефон%3A">Оставить заявку по email</a>
+          <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3А%0AКомпания%3А%0AТелефон%3А">Оставить заявку по email</a>
           <a class="btn btn-ghost" href="tel:+79373355113">Позвонить 8&nbsp;(937)&nbsp;335-51-13</a>
         </div>
       </div>
