--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
               <tr>
                 <td>Ежедневные обновления*</td>
                 <td class="yes">✓</td>
-                <td class="no">✕ <span class="year">(2023)</span></td>
-                <td class="no">✕ <span class="year">(2023)</span></td>
+                <td class="no">✕ <span class="year">(2023)</span><span class="star">★</span></td>
+                <td class="no">✕ <span class="year">(2024)</span></td>
               </tr>
               <tr>
-                <td>Специализация под юристов</td>
+                <td>Специализация под юristов</td>
                 <td class="yes">✓</td>
                 <td class="no">✕</td>
                 <td class="no">✕</td>
@@ -110,7 +110,7 @@
               <tr>
                 <td>Работа с файлами и аудио*</td>
                 <td class="yes">✓</td>
-                <td class="semi">частично</td>
+                <td class="no">✕<span class="star">★</span></td>
                 <td></td>
               </tr>
             </tbody>
@@ -159,7 +159,7 @@
         <h2 class="reveal">Специальное предложение</h2>
         <p class="lead reveal delay1">14 дней бесплатно + персональный onboarding при заключении договора до <strong>30 сентября</strong>.</p>
         <div class="cta reveal delay2">
-          <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3А%0AКомпания%3А%0AТелефон%3А">Оставить заявку по email</a>
+          <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3A%0AКомпания%3A%0AТелефон%3A">Оставить заявку по email</a>
           <a class="btn btn-ghost" href="tel:+79373355113">Позвонить 8&nbsp;(937)&nbsp;335-51-13</a>
         </div>
       </div>
