--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ГИАТЕРРА — ИИ-сервис для юристов</title>
-  <meta name="description" content="Российский ИИ-сервис для юристов: соответствие 152-ФЗ, ежедневные обновления, работа с документами и аудио. 14 дней бесплатно.">
+  <meta name="description" content="Российский ИИ-сервис для юристов: соответствие 152-ФЗ, ежедневные обновления, работа с документами и аудио. 7 дней бесплатно.">
   <link rel="icon" href="logo.png">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -92,11 +92,11 @@
               <tr>
                 <td>Ежедневные обновления*</td>
                 <td class="yes">✓</td>
-                <td class="no">✕ <span class="year">(2023)</span><span class="star">★</span></td>
+                <td class="no">✕<span class="aster">*</span> <span class="year">(2023)</span></td>
                 <td class="no">✕ <span class="year">(2024)</span></td>
               </tr>
               <tr>
-                <td>Специализация под юristов</td>
+                <td>Специализация под юристов</td>
                 <td class="yes">✓</td>
                 <td class="no">✕</td>
                 <td class="no">✕</td>
@@ -110,7 +110,7 @@
               <tr>
                 <td>Работа с файлами и аудио*</td>
                 <td class="yes">✓</td>
-                <td class="no">✕<span class="star">★</span></td>
+                <td class="no">✕<span class="aster">*</span></td>
                 <td></td>
               </tr>
             </tbody>
@@ -157,9 +157,9 @@
     <section id="offer" class="section section--accent">
       <div class="container">
         <h2 class="reveal">Специальное предложение</h2>
-        <p class="lead reveal delay1">14 дней бесплатно + персональный onboarding при заключении договора до <strong>30 сентября</strong>.</p>
+        <p class="lead reveal delay1">7 дней бесплатно + персональный onboarding при заключении договора до <strong>30 сентября</strong>.</p>
         <div class="cta reveal delay2">
-          <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3A%0AКомпания%3A%0AТелефон%3A">Оставить заявку по email</a>
+          <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3А%0AКомпания%3А%0AТелефон%3А">Оставить заявку по email</a>
           <a class="btn btn-ghost" href="tel:+79373355113">Позвонить 8&nbsp;(937)&nbsp;335-51-13</a>
         </div>
       </div>
@@ -178,7 +178,7 @@
           <h3>Быстрая заявка</h3>
           <input class="input" name="Имя" placeholder="Ваше имя" required>
           <input class="input" name="Email" type="email" placeholder="Ваш email" required>
-          <textarea class="input" name="Сообщение" rows="4" placeholder="Коротко опишите задачу"></textarea>
+          <textarea class="input" name="Сообщение" rows="4" placeholder="Оставьте свои данные"></textarea>
           <button class="btn btn-primary" type="submit">Отправить</button>
         </form>
       </div>
@@ -191,7 +191,8 @@
         <img src="logo.png" class="footer__logo" alt="">
         © ООО «ГИАТЕРРА»
       </span>
-      <p class="muted">P.S. По статистике, клиенты окупают подписку за 2–3 месяца.</p>
+      <p class="muted reveal pulse">P.S. По статистике, клиенты окупают подписку за 2–3 месяца.</p>
+      <p class="muted inn">ИНН: 0274986628</p>
     </div>
   </footer>
 
