--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </section>
 
-    <!-- СРАВНЕНИЕ (как на макете) -->
+    <!-- СРАВНЕНИЕ -->
     <section id="compare" class="section">
       <div class="container">
         <h2 class="reveal">Сравните с другими</h2>
@@ -111,7 +111,7 @@
                 <td>Работа с файлами и аудио*</td>
                 <td class="yes">✓</td>
                 <td class="no">✕<span class="aster">*</span></td>
-                <td></td>
+                <td class="no">✕</td>
               </tr>
             </tbody>
           </table>
